observability/manifests/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: shared
      namespace: gateway
  hostnames:
    - grafana.192.168.1.27.nip.io
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
